--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
-  "name": "root",
   "private": true,
+  "homepage": "https://github.com/canmou/react-tmap",
+  "scripts": {
+    "version": "lerna version --exact --force-publish --no-push --no-git-tag-version",
+    "bootstrap": "lerna bootstrap"
+  },
   "devDependencies": {
     "lerna": "^4.0.0"
   }
