--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -2,7 +2,7 @@
   "name": "@canmou/react-tmap-types",
   "version": "1.0.0",
   "description": "用于加载腾讯地图SDK依赖，加载完成，全局将会有**`window.TMap`**对象。",
-  "main": "index.js",
+  "main": "cjs/index.js",
   "repository": "https://github.com/canmou/react-tmap.git",
   "author": "chenzhaozheng",
   "license": "MIT",
