--- a/lerna.json
+++ b/lerna.json
@@ -1,7 +1,7 @@
 {
-  "packages": [
-    "packages/*",
-    "website"
-  ],
-  "version": "1.0.0"
+  "packages": ["packages/*", "website"],
+  "version": "1.0.0",
+  "publishConfig": {
+    "access": "public"
+  }
 }
