--- a/lerna.json
+++ b/lerna.json
@@ -1,5 +1,8 @@
 {
-  "packages": ["packages/*", "website"],
+  "packages": [
+    "packages/*",
+    "website"
+  ],
   "version": "1.0.0",
   "publishConfig": {
     "access": "public"
