--- a/packages/info-window/package.json
+++ b/packages/info-window/package.json
@@ -3,14 +3,11 @@
   "version": "1.0.0",
   "description": "用于加载腾讯地图SDK依赖，加载完成，全局将会有**`window.TMap`**对象。",
   "main": "cjs/index.js",
-  "module": "esm/index.js",
   "repository": "https://github.com/canmou/react-tmap.git",
   "author": "chenzhaozheng",
   "license": "MIT",
   "files": [
-    "src",
-    "esm",
-    "cjs"
+    "src"
   ],
   "peerDependencies": {
     "react": ">=16.12.0",
