--- a/lerna.json
+++ b/lerna.json
@@ -2,8 +2,5 @@
   "packages": [
     "packages/*"
   ],
-  "version": "1.0.2",
-  "publishConfig": {
-    "access": "public"
-  }
+  "version": "1.0.2"
 }
