--- a/packages/map/package.json
+++ b/packages/map/package.json
@@ -13,5 +13,6 @@
   "devDependencies": {
     "@types/react": "17.0.34",
     "@types/react-dom": "17.0.11"
-  }
+  },
+  "gitHead": "d71165f4331db135eca5fea5789a863605d7333b"
 }
