--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -9,5 +9,6 @@
   "peerDependencies": {
     "react": ">=16.12.0",
     "react-dom": ">=16.12.0"
-  }
+  },
+  "gitHead": "d71165f4331db135eca5fea5789a863605d7333b"
 }
