--- a/packages/multi-marker/package.json
+++ b/packages/multi-marker/package.json
@@ -14,5 +14,9 @@
     "@types/react": "17.0.34",
     "@types/react-dom": "17.0.11"
   },
+  "dependencies": {
+    "@canmou/react-tmap-map": "1.0.4",
+    "@canmou/react-tmap-utils": "1.0.4"
+  },
   "gitHead": "d71165f4331db135eca5fea5789a863605d7333b"
 }
