--- a/packages/tmap/package.json
+++ b/packages/tmap/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@canmou/react-tmap",
-  "version": "1.0.3",
+  "version": "1.0.5",
   "description": "用于加载腾讯地图SDK依赖，加载完成，全局将会有**`window.TMap`**对象。",
   "main": "cjs/index.js",
   "repository": "https://github.com/canmou/react-tmap.git",
@@ -11,12 +11,12 @@
     "react-dom": ">=16.12.0"
   },
   "dependencies": {
-    "@canmou/react-tmap-types": "1.0.3",
-    "@canmou/react-tmap-api-loader": "1.0.3",
-    "@canmou/react-tmap-map": "1.0.4",
-    "@canmou/react-tmap-info-window": "1.0.3",
-    "@canmou/react-tmap-multi-marker": "1.0.3",
-    "@canmou/react-tmap-require-script": "1.0.3"
+    "@canmou/react-tmap-api-loader": "^1.0.5",
+    "@canmou/react-tmap-info-window": "^1.0.5",
+    "@canmou/react-tmap-map": "^1.0.5",
+    "@canmou/react-tmap-multi-marker": "^1.0.5",
+    "@canmou/react-tmap-require-script": "1.0.3",
+    "@canmou/react-tmap-types": "1.0.3"
   },
   "gitHead": "d71165f4331db135eca5fea5789a863605d7333b"
 }
