--- a/packages/info-window/package.json
+++ b/packages/info-window/package.json
@@ -13,6 +13,10 @@
     "react": ">=16.12.0",
     "react-dom": ">=16.12.0"
   },
+  "dependencies": {
+    "@canmou/react-tmap-map": "^1.0.6",
+    "@canmou/react-tmap-utils": "^1.0.6"
+  },
   "devDependencies": {
     "@types/react": "17.0.34",
     "@types/react-dom": "17.0.11"
