--- a/packages/map/package.json
+++ b/packages/map/package.json
@@ -3,9 +3,15 @@
   "version": "1.0.11",
   "description": "用于加载腾讯地图SDK依赖，加载完成，全局将会有**`window.TMap`**对象。",
   "main": "cjs/index.js",
+  "module": "esm/index.js",
   "repository": "https://github.com/canmou/react-tmap.git",
   "author": "chenzhaozheng",
   "license": "MIT",
+  "files": [
+    "src",
+    "esm",
+    "cjs"
+  ],
   "peerDependencies": {
     "react": ">=16.12.0",
     "react-dom": ">=16.12.0"
