--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -16,5 +16,6 @@
   "devDependencies": {
     "@types/react": "17.0.34",
     "@types/react-dom": "17.0.11"
-  }
+  },
+  "gitHead": "3ce608f3510e25714ee761e451500db6f959de01"
 }
