--- a/website/package.json
+++ b/website/package.json
@@ -4,10 +4,13 @@
   "private": true,
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
+    "@canmou/react-tmap": "^1.0.20",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "antd": "^4.17.3",
+    "axios": "^0.26.0",
+    "babel-loader": "8.1.0",
     "customize-cra": "^1.0.0",
     "d3": "^7.2.1",
     "react": "^17.0.2",
@@ -15,6 +18,7 @@
     "react-app-rewired": "^2.1.8",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.1",
+    "tile-lnglat-transform": "^1.5.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
