--- a/website/package.json
+++ b/website/package.json
@@ -8,6 +8,9 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@turf/bbox": "^6.5.0",
+    "@turf/square-grid": "^6.5.0",
+    "@turf/turf": "^6.5.0",
     "antd": "^4.17.3",
     "axios": "^0.26.0",
     "babel-loader": "8.1.0",
